--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^5.0.0",
+    "bootstrap": "^5.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "react-webcam": "^5.2.3"
+    "react-webcam": "^5.2.3",
+    "sass": "^1.32.13"
   },
   "scripts": {
     "start": "react-scripts start",
