--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
+    "react-multi-crops": "0.0.10",
     "react-scripts": "4.0.3",
     "react-webcam": "^5.2.3",
     "sass": "^1.32.13"
